[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/scripts/LevelBase.gd" type="Script" id=1]
[ext_resource path="res://Assets/scenes/levels/level components/StartingPoint.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/scenes/levels/level components/EndingPoint.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/scenes/levels/level components/Tiles.tscn" type="PackedScene" id=4]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true

[node name="LevelBase" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Tiles" parent="." instance=ExtResource( 4 )]

[node name="StartingPoint" parent="." instance=ExtResource( 2 )]

[node name="EndingPoint" parent="." instance=ExtResource( 3 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[connection signal="area_entered" from="EndingPoint/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="EndingPoint/Area2D" to="." method="_on_Area2D_body_entered"]

[editable path="EndingPoint"]
